[gd_scene load_steps=2 format=3 uid="uid://5sqrqi8gl8o1"]

[ext_resource type="Script" path="res://resources/Debug/DebugConsole.gd" id="1_t4xrk"]

[node name="DebugConsole" type="CanvasLayer"]
script = ExtResource("1_t4xrk")

[node name="CanvasLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2

[node name="general" type="Control" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/general"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -116.0
offset_right = 89.0
grow_vertical = 0
theme_override_constants/separation = -5
alignment = 2

[node name="FpsCounter" type="Label" parent="CanvasLayer/MarginContainer/general/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "FPS"
vertical_alignment = 1
uppercase = true

[node name="PlayerVelocity" type="Label" parent="CanvasLayer/MarginContainer/general/VBoxContainer"]
layout_mode = 2
text = "Velocity"
uppercase = true

[node name="PlayerPosition" type="Label" parent="CanvasLayer/MarginContainer/general/VBoxContainer"]
layout_mode = 2
text = "POS.X
"

[node name="PlayerState" type="Label" parent="CanvasLayer/MarginContainer/general/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "STATE"
vertical_alignment = 1
uppercase = true

[node name="PlayerDirection" type="Label" parent="CanvasLayer/MarginContainer/general/VBoxContainer"]
layout_mode = 2
text = "DIRECTION"

[node name="CurrentRoom" type="Label" parent="CanvasLayer/MarginContainer/general/VBoxContainer"]
layout_mode = 2
text = "room"
uppercase = true

[node name="player_abilties" type="Control" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/player_abilties"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = -5

[node name="etherealWings" type="Label" parent="CanvasLayer/MarginContainer/player_abilties/VBoxContainer"]
layout_mode = 2
text = "ETHEREALWINGS"
horizontal_alignment = 2
uppercase = true

[node name="chimeraTalons" type="Label" parent="CanvasLayer/MarginContainer/player_abilties/VBoxContainer"]
layout_mode = 2
text = "CHIMERATALONS"
horizontal_alignment = 2
uppercase = true

[node name="seekerCape" type="Label" parent="CanvasLayer/MarginContainer/player_abilties/VBoxContainer"]
layout_mode = 2
text = "SEEKERCAPE"
horizontal_alignment = 2
uppercase = true

[node name="chronostasis" type="Label" parent="CanvasLayer/MarginContainer/player_abilties/VBoxContainer"]
layout_mode = 2
text = "CHRONOSTASIS"
horizontal_alignment = 2
uppercase = true

[node name="shadowCloak" type="Label" parent="CanvasLayer/MarginContainer/player_abilties/VBoxContainer"]
layout_mode = 2
text = "SHADOWCLOAK"
horizontal_alignment = 2
uppercase = true

[node name="redKey" type="Label" parent="CanvasLayer/MarginContainer/player_abilties/VBoxContainer"]
layout_mode = 2
text = "REDKEY"
horizontal_alignment = 2
uppercase = true
